--- a/styles/main.css
+++ b/styles/main.css
@@ -8,16 +8,23 @@ body{
 }
 main{
     display: flex;
-    justify-content: center;
+    flex-direction: column;
+    align-items: center;
 }
 .container{
     background-color: #FFFFFF;
     width: 870px;
     padding: 30px;
+    margin-top: 21px;
+    border-radius: 5px;
 }
 hr{
     border: 1px solid #D1D1D1;
+    margin-bottom: 27px;
 }
+
+
+
 /* top players style  */
 .top-players{
     margin-bottom: 30px;
@@ -45,7 +52,14 @@ section-title{
     font-size: 18px;
 }
 
+
+
 /* top blog styles */
+.blogs{
+    display: grid;
+    grid-template-columns: repeat(2, 1fr);
+    grid-row-gap: 26px;
+}
 .blog{
     display: flex;
 }
